Fixed: Delete Log button alignment.

--- a/assets/css/omgf-admin.less
+++ b/assets/css/omgf-admin.less
@@ -25,7 +25,10 @@
     background: 0 0;
     border-radius: 3px;
     white-space: nowrap;
-    padding: 1px 10px !important;
+
+    &.omgf-empty {
+      padding: 1px 10px !important;
+    }
 
     &:hover {
       cursor: pointer;
